--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   flutter_local_notifications: ^12.0.4
   rxdart: ^0.27.7
   path_provider: ^2.0.11
+  shared_preferences: ^2.0.15
+
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
