--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   rxdart: ^0.27.7
   path_provider: ^2.0.11
   shared_preferences: ^2.0.15
+  flutter_staggered_grid_view: ^0.6.2
 
   
   # The following adds the Cupertino Icons font to your application.
